# clinical-ai-reliability-lab

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/adapters/providers/: base.py  (+3 more)
app/api/: routes.py  schemas.py
app/core/: ids.py  settings.py
app/evaluators/: base.py  chr_v1_evaluator.py
app/exporters/: base.py  chr_v1_exporter.py
app/models/: evaluation.py  failures.py  job.py  patient.py  report.py  validation.py
app/observability/: correlation.py  logging.py  otel.py
app/services/: job_runner.py  normalizer.py  report_orchestrator.py
app/storage/: artifact_store.py  artifact_store_factory.py  sqlite_repo.py
app/ui/: routes.py
app/validators/: base.py  chr_v1_validator.py
datasets/: case_01_stable_patient.json  case_02_missing_critical_context.json  case_03_hallucinated_claim_risk.json  case_04_contradictory_lab_history.json  case_05_abnormal_biomarker_omitted.json  case_06_repeatability_check.json  case_07_genomics_risk_marker_omitted.json  case_08_biomarker_trend_contradiction.json  case_09_genomics_and_longitudinal_biomarkers_ok.json
docker/: Dockerfile  otel-collector.yaml
docs/: architecture.md  decision-log.md  evaluation-methodology.md  observability.md  runbook.md  validation-rules.md
scripts/: generate_report.sh
tests/e2e/: test_repeatability_and_artifacts.py  test_smoke_e2e.py
tests/integration/: test_api_reports.py  test_concurrency.py  test_failure_modes.py  test_jobs.py  test_ui.py
tests/playwright/: test_ui_playwright_smoke.py
tests/unit/: test_artifact_store_local.py  test_biomarker_graph.py  test_evaluator_chr_v1.py  test_exporter_chr_v1.py  test_jobs_repo.py  test_mock_provider.py  test_normalizer.py  test_sqlite_repo.py  test_validator_chr_v1.py
(+6 files in other folders)
